--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 DENO_ENV=development
-API_URL=https://strapi.example.com/api
+API_URL=http://localhost:1337/api
 REDIS_HOST=127.0.0.1
 REDIS_PASS=example
 REDIS_PORT=6379
