--- a/.github/workflows/deno.yml
+++ b/.github/workflows/deno.yml
@@ -23,6 +23,11 @@ jobs:
       - name: Setup repo
         uses: actions/checkout@v3
 
+      - name: Setup .env secrets file
+        run: echo $ENV_GITHUB_ACTIONS | base64 -d > .env
+        env:
+          ENV_GITHUB_ACTIONS: ${{ secrets.ENV_GITHUB_ACTIONS }}
+
       - name: Setup Deno
         # uses: denoland/setup-deno@v1
         uses: denoland/setup-deno@004814556e37c54a2f6e31384c9e18e983317366
