--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "tasks": {
     "start": "deno run -A --watch=static/,routes/,README.md dev.ts",
+    "reload": "deno run -A --watch=static/,routes/,README.md --reload dev.ts",
     "run": "deno run -A main.ts"
   },
   "importMap": "./import_map.json",
