--- a/deno.json
+++ b/deno.json
@@ -8,5 +8,10 @@
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "preact"
+  },
+  "fmt": {
+    "options": {
+      "semiColons": false
+    }
   }
 }
