--- a/deno.json
+++ b/deno.json
@@ -2,20 +2,50 @@
   "tasks": {
     "start": "deno run -A --watch=static/,routes/,README.md dev.ts",
     "reload": "deno run -A --watch=static/,routes/,README.md --reload dev.ts",
-    "run": "DENO_DEPLOYMENT_ID=$(git rev-parse --short HEAD) deno run -A main.ts"
+    "run": "DENO_DEPLOYMENT_ID=$(git rev-parse --short HEAD) deno run -A main.ts",
+    "build": "deno run -A dev.ts build",
+    "preview": "deno run -A main.ts"
   },
-  "importMap": "./import_map.json",
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "preact"
   },
   "fmt": {
-    "files": {
-      "exclude": ["static/", "utils/form-validation.io/"]
-    },
     "options": {
       "semiColons": false
-    }
+    },
+    "exclude": [
+      "_fresh",
+      "static/",
+      "utils/form-validation.io/"
+    ]
   },
-  "lock": false
+  "lock": false,
+  "imports": {
+    "@/": "./",
+    "$fresh/": "https://deno.land/x/fresh@1.4.2/",
+    "$std/": "https://deno.land/std@0.177.0/",
+    "gfm": "https://deno.land/x/gfm@0.1.22/mod.ts",
+    "preact": "https://esm.sh/preact@10.15.1",
+    "preact/": "https://esm.sh/preact@10.15.1/",
+    "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.1",
+    "twind": "https://esm.sh/twind@0.16.19",
+    "twind/": "https://esm.sh/twind@0.16.19/",
+    "redis": "https://deno.land/x/redis@v0.29.1/mod.ts",
+    "fresh_marionette": "https://deno.land/x/fresh_marionette@v1.1.0/mod.js",
+    "envalid": "https://deno.land/x/envalid@0.1.2/mod.ts",
+    "@preact/signals": "https://esm.sh/*@preact/signals@1.1.3",
+    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.2.3"
+  },
+  "lint": {
+    "rules": {
+      "tags": [
+        "fresh",
+        "recommended"
+      ]
+    },
+    "exclude": [
+      "_fresh"
+    ]
+  }
 }
