--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DENO_ENV=development
+CURRENT_ENV=development
 BASE_URL=http://localhost:8000
 API_URL=http://localhost:1337/api
 REDIS_HOST=127.0.0.1
